Details
-
Bug
-
Resolution: Fixed
-
Trivial
Description
reactos-livecd-0.4.15-dev-5450-g2c89c91-x86-gcc-lin-dbg
- Open reactos.ico in "Paint"
- File > Set as wallpaper (Tiled)

Correctly shown as such in Desktop properties
Not used to render wallpaper, 'remains blue'
(win32ss/user/ntuser/misc/file.c:246) Unknown file type! |
(win32ss/user/ntuser/sysparams.c:693) err: UserLoadImage failed |

Expected behavior (2K3) : Option greyed in Paint :
